reading index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <ul>
                 <!--TEAM CARD 1-->
                 <li>
-                    <img src="./images/team1.jpg" alt="">
+                    <img src="./images/team1.jpg" alt="Photo" width="20" height="20">
                     <!--Card Content-->
                     <div>
                         <h3>Mark Guerrero</h3>
@@ -82,7 +82,7 @@
                 </li>
                 <!--TEAM CARD 2-->
                 <li>
-                    <img src="./images/team2.jpg" alt="">
+                    <img src="./images/team2.jpg" alt="Photo" width="20" height="20">
                     <!--Card Content-->
                     <div>
                         <h3>Tom Ford</h3>
@@ -91,7 +91,7 @@
                 </li>
                 <!--TEAM CARD 3-->
                 <li>
-                    <img src="./images/team3.jpg" alt="">
+                    <img src="./images/team3.jpg" alt="Photo" width="20" height="20">
                     <!--Card Content-->
                     <div>
                         <h3>Camila Garcia</h3>
@@ -100,7 +100,7 @@
                 </li>
                 <!--TEAM CARD 4-->
                 <li>
-                    <img src="./images/team4.jpg" alt="">
+                    <img src="./images/team4.jpg" alt="Photo" width="20" height="20">
                     <!--Card Content-->
                     <div>
                         <h3>Daniel Wilson</h3>
