--- a/index.html
+++ b/index.html
@@ -105,11 +105,8 @@
 
     <!-- FOOTER-->
     <footer>
-
-        <ul>
-            <li><a href="./index.html">WebStudio</a> </li>
-            <li>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</li>
-        </ul>
+        <a href="./index.html">WebStudio</a> </li>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
